MDL-69394 calendar: Fix event colour indicator contrast
* Darkened the link and clickable icon colours inside events.
* Added borders around event colour indicator for better contrast
against the white background

--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -12934,22 +12934,34 @@ body.h5p-embed .h5pmessages {
 
 /* calendar.less */
 .calendar_event_category {
-  background-color: #d8bfd8; }
+  background-color: #e0cbe0; }
+  .calendar_event_category .commands a {
+    color: #0d5ca1; }
 
 .calendar_event_course {
   background-color: #ffd3bd; }
+  .calendar_event_course .commands a {
+    color: #0d5ca1; }
 
 .calendar_event_site {
   background-color: #d6f8cd; }
+  .calendar_event_site .commands a {
+    color: #0d5ca1; }
 
 .calendar_event_group {
   background-color: #fee7ae; }
+  .calendar_event_group .commands a {
+    color: #0d5ca1; }
 
 .calendar_event_user {
   background-color: #dce7ec; }
+  .calendar_event_user .commands a {
+    color: #0d5ca1; }
 
 .calendar_event_other {
   background-color: #ced4da; }
+  .calendar_event_other .commands a {
+    color: #0d5ca1; }
 
 .path-calendar .calendartable {
   width: 100%;
@@ -12958,8 +12970,7 @@ body.h5p-embed .h5pmessages {
   .path-calendar .calendartable td {
     width: 14%;
     vertical-align: top;
-    text-align: center;
-    border: 0; }
+    text-align: center; }
 
 .path-calendar .calendar-controls .previous,
 .path-calendar .calendar-controls .next,
@@ -13026,17 +13037,23 @@ body.h5p-embed .h5pmessages {
           border-radius: 6px;
           vertical-align: middle; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_category {
-            background-color: #d8bfd8; }
+            background-color: #e0cbe0;
+            border: 2px solid #9e619f; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_course {
-            background-color: #ffd3bd; }
+            background-color: #ffd3bd;
+            border: 2px solid #d34600; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_site {
-            background-color: #d6f8cd; }
+            background-color: #d6f8cd;
+            border: 2px solid #2b8713; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_group {
-            background-color: #fee7ae; }
+            background-color: #fee7ae;
+            border: 2px solid #9a6e02; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_user {
-            background-color: #dce7ec; }
+            background-color: #dce7ec;
+            border: 2px solid #4e7c91; }
           .path-calendar .maincalendar .calendarmonth ul li .badge.badge-circle.calendar_event_other {
-            background-color: #ced4da; }
+            background-color: #ced4da;
+            border: 2px solid #687889; }
     .path-calendar .maincalendar .calendarmonth td {
       height: 5em; }
     .path-calendar .maincalendar .calendarmonth .clickable:hover {
@@ -13057,7 +13074,7 @@ body.h5p-embed .h5pmessages {
     color: #0b4f8a;
     text-decoration: underline; }
   .path-calendar .maincalendar .calendar_event_category {
-    border-color: #d8bfd8; }
+    border-color: #e0cbe0; }
   .path-calendar .maincalendar .calendar_event_course {
     border-color: #ffd3bd; }
   .path-calendar .maincalendar .calendar_event_site {
@@ -13100,36 +13117,37 @@ body.h5p-embed .h5pmessages {
   .block .minicalendar td a {
     width: 100%;
     height: 100%;
-    display: block; }
-  .block .minicalendar td.duration_global {
-    border-top: 1px solid #d6f8cd;
-    border-bottom: 1px solid #d6f8cd; }
-    .block .minicalendar td.duration_global.duration_finish {
+    display: block;
+    color: #0d5ca1; }
+  .block .minicalendar td.calendar_event_site {
+    border-top: 2px solid #2b8713;
+    border-bottom: 2px solid #2b8713; }
+    .block .minicalendar td.calendar_event_site.duration_finish {
       background-color: #d6f8cd; }
-  .block .minicalendar td.duration_category {
-    border-top: 1px solid #d8bfd8;
-    border-bottom: 1px solid #d8bfd8; }
-    .block .minicalendar td.duration_category.duration_finish {
-      background-color: #d8bfd8; }
-  .block .minicalendar td.duration_course {
-    border-top: 1px solid #ffd3bd;
-    border-bottom: 1px solid #ffd3bd; }
-    .block .minicalendar td.duration_course.duration_finish {
+  .block .minicalendar td.calendar_event_category {
+    border-top: 2px solid #9e619f;
+    border-bottom: 2px solid #9e619f; }
+    .block .minicalendar td.calendar_event_category.duration_finish {
+      background-color: #e0cbe0; }
+  .block .minicalendar td.calendar_event_course {
+    border-top: 2px solid #d34600;
+    border-bottom: 2px solid #d34600; }
+    .block .minicalendar td.calendar_event_course.duration_finish {
       background-color: #ffd3bd; }
-  .block .minicalendar td.duration_group {
-    border-top: 1px solid #fee7ae;
-    border-bottom: 1px solid #fee7ae; }
-    .block .minicalendar td.duration_group.duration_finish {
+  .block .minicalendar td.calendar_event_group {
+    border-top: 2px solid #9a6e02;
+    border-bottom: 2px solid #9a6e02; }
+    .block .minicalendar td.calendar_event_group.duration_finish {
       background-color: #fee7ae; }
-  .block .minicalendar td.duration_user {
-    border-top: 1px solid #dce7ec;
-    border-bottom: 1px solid #dce7ec; }
-    .block .minicalendar td.duration_user.duration_finish {
+  .block .minicalendar td.calendar_event_user {
+    border-top: 2px solid #4e7c91;
+    border-bottom: 2px solid #4e7c91; }
+    .block .minicalendar td.calendar_event_user.duration_finish {
       background-color: #dce7ec; }
-  .block .minicalendar td.duration_other {
-    border-top: 1px solid #ced4da;
-    border-bottom: 1px solid #ced4da; }
-    .block .minicalendar td.duration_other.duration_finish {
+  .block .minicalendar td.calendar_event_other {
+    border-top: 2px solid #687889;
+    border-bottom: 2px solid #687889; }
+    .block .minicalendar td.calendar_event_other.duration_finish {
       background-color: #ced4da; }
   .block .minicalendar caption {
     font-size: inherit;
@@ -13162,6 +13180,30 @@ body.h5p-embed .h5pmessages {
 
 .block .calendar_filters li {
   margin-bottom: 0.2em; }
+  .block .calendar_filters li span.calendar_event_category {
+    border: 2px solid #9e619f; }
+    .block .calendar_filters li span.calendar_event_category i {
+      color: #0d5ca1; }
+  .block .calendar_filters li span.calendar_event_course {
+    border: 2px solid #d34600; }
+    .block .calendar_filters li span.calendar_event_course i {
+      color: #0d5ca1; }
+  .block .calendar_filters li span.calendar_event_site {
+    border: 2px solid #2b8713; }
+    .block .calendar_filters li span.calendar_event_site i {
+      color: #0d5ca1; }
+  .block .calendar_filters li span.calendar_event_group {
+    border: 2px solid #9a6e02; }
+    .block .calendar_filters li span.calendar_event_group i {
+      color: #0d5ca1; }
+  .block .calendar_filters li span.calendar_event_user {
+    border: 2px solid #4e7c91; }
+    .block .calendar_filters li span.calendar_event_user i {
+      color: #0d5ca1; }
+  .block .calendar_filters li span.calendar_event_other {
+    border: 2px solid #687889; }
+    .block .calendar_filters li span.calendar_event_other i {
+      color: #0d5ca1; }
   .block .calendar_filters li span img {
     padding: 0 0.2em;
     margin: 0; }
